[tool.poetry]
name = "vcon-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"
gunicorn = "^21.2.0"
datadog = "^0.48.0"
uvicorn = "0.23.2"
redis = "4.6.0"
fastapi = "0.110.0"
python-json-logger = "2.0.4"
pyyaml = "^6.0.1"
peewee = "3.15.3"
sentry-sdk = "1.35.0"
pydantic = "^2.6.2"
tenacity = "^8.2.3"
uuid6 = "^2024.1.12"
pydash = "^7.0.7"
requests = "^2.31.0"
slack-sdk = "^3.27.1"
boto3 = "^1.34.52"
deepgram-sdk = "^3.1.5"
openai = "0.27.6"
psycopg2-binary = "^2.9.9"
pymongo = "^4.6.2"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
